--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=4242
 # DB configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/attendy
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://192.168.0.107:3306/attendy
+spring.datasource.username=attendy
+spring.datasource.password=attendy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
